src/components/ListItem/ListItem.module.scss
@import 'src/styles/base';

.ListItem {
  display: flex;
  flex-direction: column;
  background-color: #fff;
  flex-wrap: wrap;
  
  .ListItem__Wrapper {    
    border-radius: $border-radius;
    display: flex;
    padding: 16px;
    text-align: left;
    flex-wrap: wrap;
  
    .ListItem__Link {
      text-decoration: none;
      flex-grow: 1;
    }
  
    .ListItem__ImgWrapper {
      width: 100%;
      height: auto;
      border-radius: $border-radius;
      overflow: hidden;
      margin-right: 16px;
      flex-shrink: 0;
  
      img {
        width: 100%;
        height: 100%;
        object-fit: cover;
      }
    }
  
    .ListItem__MainInfo {
      flex-grow: 1;
      font-size: 1.125rem;
      padding: 32px 0;
      display: flex;
      flex-direction: column;
  
      .ListItem__MainInfo__Price {
        font-size: 1.5rem;
        color: $primary-text;
  
        .ListItem__MainInfo__Price__Block {
          display: flex;
          align-items: center;
          line-height: 1;
          color: $primary-text;
          gap: 10px;

          span {
            line-height: 1;
          }

          .ListItem__MainInfo__Price__Decimals {
            font-size: 16px;
            font-weight: 300;
            align-self: flex-start;
            margin-left: -5px;
          }
        }

      }
  
      .ListItem__MainInfo__Title {
        margin-top: 32px;      
        line-height: 1.3;
        color: $secondary-text;
      }
    }
  
    .ListItem__SecondaryInfo {            
      flex-shrink: 0;       
      padding: 16px 0;
      justify-self: flex-end;

      .ListItem__SecondaryInfo__StateName {
        color: $secondary-text;
        font-size: 12px;
        font-weight: 300;
      }
    }
    
  }

  .ListItem__Divider {
    margin: 0 16px;
    border-bottom: 1px solid $light-gray;
  }
}

@media (min-width: 544px) {
  .ListItem {
    .ListItem__Wrapper {
      flex-wrap: nowrap;

      .ListItem__MainInfo {
        flex-direction: row;
      }

      .ListItem__SecondaryInfo {
        padding: 0 32px;        
      }

      .ListItem__ImgWrapper {
        width: 180px;
        height: 180px;
      }      
    }
  }
}

@media (min-width: 992px) {
  .ListItem__SecondaryInfo {    
    min-width: 200px;
  }
}

